tests/ui/keyword/extern/keyword-extern-as-identifier-pat.rs
fn main() {
    let extern = 0; //~ ERROR expected identifier, found keyword `extern`
}

// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
